# Stock-market-prediction

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  GITHUB_SETUP.md  Makefile  PROJECT_SUMMARY.md  README.md  UPLOAD_INSTRUCTIONS.md  check_github_ready.py  config.yaml  docker-compose.yml  flask_app.py  make_pipeline.py  mlops_pipeline.py  pyproject.toml  pytest.ini  quickstart.py  requirements-ci.txt  requirements.txt  run_pipeline.py  setup.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
models/: classification_xgb.joblib  metrics.joblib  regression_xgb.joblib  scaler_xgb.joblib
notebooks/: 01_exploratory_analysis.ipynb
src/data/: __init__.py  load_data.py  preprocessing.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  evaluate_model.py  predict.py  train_model.py
src/utils/: __init__.py  config.py  logger.py
src/visualization/: __init__.py  visualize.py
tests/: __init__.py  test_data.py  test_features.py  test_models.py  test_utils.py
