[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-prediction"
version = "1.0.0"
description = "End-to-end ML pipeline for global stock market price and direction prediction"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Muhammad Farooq", email = "mfarooqshafee333@gmail.com" }]
requires-python = ">=3.8"
keywords = ["machine-learning", "stock-market", "xgboost", "mlops", "flask"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "flask>=2.3",
    "flask-cors>=4.0",
    "joblib>=1.3",
    "mlflow>=2.5",
    "optuna>=3.2",
    "plotly>=5.15",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
stock-market-train = "src.models.train_model:main"
stock-market-predict = "src.models.predict:main"
stock-market-api = "flask_app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "black>=23.7",
    "flake8>=6.0",
    "isort>=5.12",
    "pylint>=2.17",
]

[project.urls]
Homepage = "https://github.com/Muhammad-Farooq13/Stock-market-prediction"
Repository = "https://github.com/Muhammad-Farooq13/Stock-market-prediction"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs", ".venv", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
